# s21_brickgame

./: .gitignore  README.md
src/: CMakeLists.txt  Doxyfile  Makefile  tetris
src/brick_game/snake/: snake_controller_wrapper_c.cpp  tests.cpp
src/brick_game/snake/inc/: snake_controller.h  snake_controller_wrapper_c.h  snake_fsm.h  snake_game.h
src/brick_game/tetris/: fsm.c  game.c  tests.c  tetris_controller.c
src/brick_game/tetris/inc/: fsm.h  game.h  objects.h  tetris_controller.h
src/common/: brickgame_api.h
src/gui/cli/: gui.c  main.c
src/gui/cli/inc/: gui.h  main.h
src/gui/desktop/: desktop_view.cpp  desktop_view.h
